@@ -310,7 +310,7 @@
       </p>
     </dd>
 
-    <dt>[<code>--id=@</code><var>name</var>] <code>create</code> <var>table column</var>[<code>:</code><var>key</var>]<code>=</code><var>value</var>...</dt>
+    <dt>[<code>--id=(@</code><var>name</var>|<var>uuid</var>)] <code>create</code> <var>table column</var>[<code>:</code><var>key</var>]<code>=</code><var>value</var>...</dt>
     <dd>
       <p>
         Creates a new record in <var>table</var> and sets the initial values of
@@ -322,6 +322,10 @@
         referred to by that name elsewhere in the same <code>\*(PN</code>
         invocation in contexts where a UUID is expected.  Such references may
         precede or follow the <code>create</code> command.
+      </p>
+      <p>
+        If a valid <var>uuid</var> is specified, then it is used as the
+        UUID of the new row.
       </p>
       <dl>
         <dt>Caution (ovs-vsctl as example)</dt>
